namespace MauiApp1.Model
{
    public class StatusUpdateDto
    {
        public int RouteId { get; set; }
        public string Status { get; set; } = "";
    }
}
