namespace WebApplication1.Enums
{
    public enum Status
    {
        Assigned = 0,
        Started = 1,
        Finished = 2
    }
}
