@startuml
skinparam backgroundColor white
skinparam shadowing false
skinparam defaultFontSize 20
skinparam classAttributeIconSize 0
skinparam classFontSize 22
skinparam packageFontSize 24
skinparam classAttributeFontSize 20
skinparam linetype polyline
skinparam nodesep 25
skinparam ranksep 30
skinparam packagePadding 10

skinparam class {
    BorderColor #333333
    ArrowColor #555555
    FontColor #222222
}

title <size:28>Structura Aplicației Web (ASP.NET Core MVC)</size>

package "Controllers" #F3E5F5 {
    class HomeController {
        Admin()
        Driver()
        AddUser()
        AddCar()
        AddRoute()
        UpdateStatus()
    }
    class AuthController {
        Login() → JWT
    }
    class DriverController {
        GetRoutes()
        UpdateStatus()
    }
}

package "Models" #E8F5E9 {
    class AppUser {
        Id, UserName, Email
        PasswordHash
        __
        extinde IdentityUser
    }
    class Car {
        Id, SerialNumber
        Model, VIN
    }
    class Route {
        Id, UserId, CarId
        Name, Status
        Start, End, Timestamp
    }
    class CarData {
        Id, RouteId
        RPM, Speed, VIN
        FuelType, FuelLevel
        Latitude, Longitude
        __
        20+ câmpuri OBD2
    }
    class WebAppDbContext {
        DbSet<Car>
        DbSet<Route>
        DbSet<CarData>
    }

    AppUser "1" -r- "*" Route
    Car "1" -l- "*" Route
    Route "1" -d- "*" CarData
}

package "DTOs" #FFFDE7 {
    class UserDTO
    class LoginDto
    class CreateUserDTO
    class CarDTO
    class DisplayDTO
    class RouteDTO
    class UpdateRouteStatusDTO
    class RouteDisplayDTO
    class StatusUpdateDTO
}

package "Repository" #E3F2FD {
    interface "IRepository<T>" as IRepo {
        GetAsync()
        GetAll()
        AddAsync()
        UpdateAsync()
        DeleteAsync()
    }
    class "Repository<T>" as Repo
    Repo ..|> IRepo
}

package "Helpers" #FFF3E0 {
    class VinDecoder <<static>> {
        Decode(string vin)
    }
}

package "Views (Razor)" #FFCCBC {
    class "Admin.cshtml" as AdminV
    class "Driver.cshtml" as DriverV
    class "Index.cshtml" as IndexV
}

package "Enums" #F5F5F5 {
    enum Status {
        Assigned = 0
        Started = 1
        Finished = 2
    }
}

' === Relații între pachete ===
HomeController -d-> IRepo : <size:16>CRUD</size>
DriverController -d-> IRepo
Repo -d-> WebAppDbContext : <size:16>DbSet<T></size>

HomeController -r-> AdminV : <size:16>randează</size>
HomeController -r-> DriverV
HomeController -r-> IndexV

HomeController ..> CreateUserDTO
HomeController ..> CarDTO
HomeController ..> RouteDTO
AuthController ..> LoginDto

Route .r. Status

@enduml
